# Robotic-Dog

./: README.md
RoboDog_UI/: README.md  index.html  main.js  package.json  preload.js  rosbridge_listener.py
RoboDog_ws/: run_robodog_stack.sh
RoboDog_ws/src/robodog_bringup/: package.xml  setup.cfg  setup.py
RoboDog_ws/src/robodog_bringup/config/: laptop_usb_joystick.yaml  rpi_bluetooth_joystick.yaml  slam_toolbox_online_async.yaml
RoboDog_ws/src/robodog_bringup/launch/: quick_data_test.launch.py  real_hardware.launch.py  rpi_bluetooth_joystick.launch.py  web_interface.launch.py
RoboDog_ws/src/robodog_bringup/robodog_bringup/: joystick_launch_common.py
RoboDog_ws/src/robodog_control/: package.xml  setup.cfg  setup.py
RoboDog_ws/src/robodog_control/robodog_control/: manual_controller_node.py
RoboDog_ws/src/robodog_interface/: WEB_INTERFACE_PROMPT.md  package.xml  setup.cfg  setup.py
RoboDog_ws/src/robodog_interface/robodog_interface/: monitor_node.py
RoboDog_ws/src/robodog_joystick/: package.xml  setup.cfg  setup.py
RoboDog_ws/src/robodog_joystick/robodog_joystick/: joystick_debug_node.py  joystick_node.py
RoboDog_ws/src/robodog_msgs/: CMakeLists.txt  package.xml
RoboDog_ws/src/robodog_msgs/msg/: MotorCommand.msg  RobotStatus.msg
RoboDog_ws/src/robodog_stm32_bridge/: package.xml  setup.cfg  setup.py
RoboDog_ws/src/robodog_stm32_bridge/robodog_stm32_bridge/: stm32_bridge_node.py
RoboDog_ws/src/robodog_vision/: package.xml  setup.cfg  setup.py
RoboDog_ws/src/robodog_vision/launch/: camera_detection.launch.py
RoboDog_ws/src/robodog_vision/robodog_vision/: __init__.py  camera_detection_node.py  ncnn_detection_node.py
RoboDog_ws/src/robot_sensors/: package.xml  setup.py
RoboDog_ws/src/robot_sensors/launch/: ultrasonic_2d_mapping.launch.py  ultrasonic_2d_mapping_sim.launch.py
RoboDog_ws/src/robot_sensors/robot_sensors/: aht10_node.py  imu_simulator_node.py  mpu9250_node.py  ultrasonic_node.py  ultrasonic_occupancy_mapper_node.py  ultrasonic_occupancy_node.py  ultrasonic_range_bridge_node.py  ultrasonic_test_publisher.py
docs/REPORT/: main.aux  main.fdb_latexmk  main.fls  main.tex  main.toc  main.xdv  tmpclaude-36bf-cwd
docs/REPORT/chapters/: appendix.tex  chapter01_project_overview.tex  chapter02_benchmark.tex  chapter03_project_management.tex  chapter03_safety_framework.tex  chapter04_autonomous_navigation.tex  chapter04_system_architecture.tex  chapter05_mechanical_design.tex  chapter05_mission_orchestration.tex  chapter06_power_system.tex  chapter06_supervision_platform.tex  chapter07_implementation.tex  chapter07_iot_systems.tex  chapter08_dashboard.tex  chapter08_testing.tex  chapter09_conclusion.tex  chapter09_ros2.tex  chapter10_testing.tex  chapter11_conclusion.tex  frontmatter.tex
