<?xml version="1.0"?>
<package format="3">
  <name>robodog_bringup</name>
  <version>0.0.1</version>
  <description>Launch files for Robo Dog.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>robodog_joystick</exec_depend>
  <exec_depend>robodog_control</exec_depend>
  <exec_depend>robodog_stm32_bridge</exec_depend>
  <exec_depend>robodog_interface</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>
  <exec_depend>web_video_server</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
