<?xml version="1.0"?>
<package format="3">
  <name>robodog_control</name>
  <version>0.0.1</version>
  <description>Manual control node for Robo Dog.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robodog_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
