<?xml version="1.0"?>
<package format="3">
  <name>robot_sensors</name>
  <version>0.0.1</version>
  <description>ROS 2 sensor node for Raspberry Pi 5 reading ultrasonic, AHT10, and GY-87 sensors.</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-smbus2</exec_depend>
  <exec_depend>python3-rpi-lgpio</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
